@@ -1,3 +1,7 @@
+* 2014-06-22 - thorben.betten@open-xchange.com
+
+ - Fix for bug 33219: Proper access to config cascade to orderly acquire scope-cascaded quota setting
+
 * 2014-06-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 32323: Introduced "acknowledge" parameter for EDIT actions to prevent implicit client-side acknowledgments of unknown files  
